--- a/token_transfer/programs/token_transfer/Cargo.toml
+++ b/token_transfer/programs/token_transfer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "token_transfer"
+name = "token-transfer"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
@@ -19,7 +19,7 @@ default = []
 overflow-checks = true
 
 [dependencies]
-anchor-lang = "0.24.2"
-anchor-spl = "0.24.2"
-spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
-cronos-scheduler = { version = "0.2.0-alpha5", features = ["cpi"] }
+anchor-spl = { version = "0.24.2", features = ["token"] }
+anchor-lang = "0.24.2" 
+cronos-scheduler = { path = "../../../../cronos/programs/scheduler", features = ["cpi"] }
+# cronos-scheduler = { version = "0.2.0-alpha5", features = ["cpi"] }
