--- a/dca/programs/dca/Cargo.toml
+++ b/dca/programs/dca/Cargo.toml
@@ -19,7 +19,6 @@ default = []
 overflow-checks = true
 
 [dependencies]
-anchor-spl = { version = "0.24.2", features = ["token"] }
+anchor-spl = { version = "0.24.2", features = ["dex"] }
 anchor-lang = "0.24.2"
-serum-swap = { path = "../../../../../project-serum/swap/programs/swap", version = "0.4.0", features = ["cpi"] }
 cronos-scheduler = { path = "../../../../cronos/programs/scheduler", features = ["cpi"] }
