--- a/dca/Anchor.toml
+++ b/dca/Anchor.toml
@@ -1,5 +1,6 @@
 [features]
 seeds = false
+
 [programs.localnet]
 dca = "44opPXADb4iVtE3nPtWpQu3eNW1QQ3zHxFREN8Pwh7Aw"
 
@@ -8,7 +9,7 @@ url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "localnet"
-wallet = "/Users/eliasmoreno/.config/solana/id.json"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
