--- a/dca/client/Cargo.toml
+++ b/dca/client/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 dca = { path = "../programs/dca", features = ["no-entrypoint"], version = "0.1.0" }
-cronos-scheduler = { path = "../../../cronos/programs/scheduler" }
-anchor-spl = "0.24.2"
+cronos-scheduler = { version = "0.2.0", features = ["cpi"] }
+anchor-spl = { version = "0.24.2", features = ["dex", "devnet"] }
 anchor-lang = "0.24.2"
 solana-sdk = "~1.9.13"
 solana-client = "~1.9.13"
