--- a/hello_cronos/programs/hello_cronos/Cargo.toml
+++ b/hello_cronos/programs/hello_cronos/Cargo.toml
@@ -20,5 +20,5 @@ overflow-checks = true
 
 [dependencies]
 anchor-lang = "0.24.2"
-cronos-scheduler = { version = "0.2.0-alpha5", features = ["cpi"] }
+cronos-scheduler = { version = "0.2.0", features = ["cpi"] }
 
