--- a/token_transfer/client/Cargo.toml
+++ b/token_transfer/client/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "invoke"
+name = "client"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 token-transfer = { path = "../programs/token_transfer", features = ["no-entrypoint"], version = "0.1.0" }
-cronos-scheduler = { path = "../../../cronos/programs/scheduler" }
-# cronos-scheduler = "0.2.0-alpha5"
+cronos-scheduler = { version = "0.2.0", features = ["cpi"] }
 anchor-spl = "0.24.2"
 anchor-lang = "0.24.2"
 solana-sdk = "~1.9.13"
