--- a/token_transfer/programs/token_transfer/Cargo.toml
+++ b/token_transfer/programs/token_transfer/Cargo.toml
@@ -21,5 +21,4 @@ overflow-checks = true
 [dependencies]
 anchor-spl = { version = "0.24.2", features = ["token"] }
 anchor-lang = "0.24.2" 
-cronos-scheduler = { path = "../../../../cronos/programs/scheduler", features = ["cpi"] }
-# cronos-scheduler = { version = "0.2.0-alpha5", features = ["cpi"] }
+cronos-scheduler = { version = "0.2.0", features = ["cpi"] }
