--- a/dca/Anchor.toml
+++ b/dca/Anchor.toml
@@ -1,14 +1,18 @@
 [features]
 seeds = false
+
 [programs.localnet]
-dca = "44opPXADb4iVtE3nPtWpQu3eNW1QQ3zHxFREN8Pwh7Aw"
+dca = "FUiHLukGXsmSoDvF4aWaget9RcMFmSTMLtkZDjULkgPE"
+
+[programs.devnet]
+dca = "FUiHLukGXsmSoDvF4aWaget9RcMFmSTMLtkZDjULkgPE"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
-cluster = "localnet"
-wallet = "/Users/eliasmoreno/.config/solana/id.json"
+cluster = "devnet"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
