--- a/token_transfer/client/Cargo.toml
+++ b/token_transfer/client/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 token-transfer = { path = "../programs/token_transfer", features = ["no-entrypoint"], version = "0.1.0" }
-cronos-scheduler = { version = "0.2.0", features = ["cpi"] }
-anchor-spl = "0.24.2"
-anchor-lang = "0.24.2"
-solana-sdk = "~1.9.13"
-solana-client = "~1.9.13"
+clockwork-scheduler = { version = "1.0.1", features = ["cpi"] }
+anchor-spl = "0.25.0"
+anchor-lang = "0.25.0"
+solana-sdk = "1.10.29"
+solana-client = "1.10.29"
 solana-client-helpers = "1.1.0"
