--- a/payments/programs/payments/Cargo.toml
+++ b/payments/programs/payments/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "token-transfer"
+name = "payments-program"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "token_transfer"
+name = "payments_program"
 
 [features]
 no-entrypoint = []
