client side big

--- a/investments/Anchor.toml
+++ b/investments/Anchor.toml
@@ -2,10 +2,10 @@
 seeds = false
 
 [programs.localnet]
-dca = "AuULUS4h7EooCnpnJ9DqSKuh2on2SkYJLpSU2pWCYXTH"
+investments_program = "4W4J57gPvUsmwbNtaR5ddsnx7u46jwJ3iqiD5H97eeXP"
 
 [programs.devnet]
-dca = "AuULUS4h7EooCnpnJ9DqSKuh2on2SkYJLpSU2pWCYXTH"
+investments_program = "4W4J57gPvUsmwbNtaR5ddsnx7u46jwJ3iqiD5H97eeXP"
 
 [registry]
 url = "https://anchor.projectserum.com"
