Update for workshop demo

--- a/hello_clockwork/Cargo.toml
+++ b/hello_clockwork/Cargo.toml
@@ -3,3 +3,6 @@ members = [
     "client",
     "programs/*"
 ]
+
+[patch.crates-io]
+clockwork-scheduler = { git = "https://github.com/clockwork-xyz/clockwork", branch = "nick/localnet-3" }
