--- a/hello_clockwork/Anchor.toml
+++ b/hello_clockwork/Anchor.toml
@@ -2,16 +2,16 @@
 seeds = false
 
 [programs.devnet]
-hello_clockwork = "CBZ9JBKaPTi1f1LEBeeCuMQUbuGBrMNZAXL2HH2GfkhZ"
+hello_clockwork = "44KismN5u53sKPtbFSWhVFtt8kBQH74EvAKHbdSd9tZz"
 
 [programs.localnet]
-hello_clockwork = "CBZ9JBKaPTi1f1LEBeeCuMQUbuGBrMNZAXL2HH2GfkhZ"
+hello_clockwork = "44KismN5u53sKPtbFSWhVFtt8kBQH74EvAKHbdSd9tZz"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
