--- a/hello_clockwork/client/Cargo.toml
+++ b/hello_clockwork/client/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 hello-clockwork = { path = "../programs/hello_clockwork", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-scheduler = { version = "1.0.1", features = ["cpi"] }
+clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "nick/crank-program"}
 anchor-lang = "0.25.0"
 solana-client-helpers = "1.1.0"
 solana-sdk = "1.10.29"
