--- a/payments/client/Cargo.toml
+++ b/payments/client/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 payments-program = { path = "../programs/payments", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-scheduler = { version = "1.0.1", features = ["cpi"] }
+clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "nick/crank-program"}
 anchor-spl = "0.25.0"
 anchor-lang = "0.25.0"
 solana-sdk = "1.10.29"
