initial scaffolding of serum crank

--- a/investments/programs/serum_crank/Cargo.toml
+++ b/investments/programs/serum_crank/Cargo.toml
@@ -22,3 +22,4 @@ overflow-checks = true
 anchor-spl = { version = "0.25.0", features = ["dex"] }
 anchor-lang = "0.25.0"
 clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "nick/crank-program", features = ["cpi"] }
+safe-transmute = "0.11.0"
