--- a/investments/client/Cargo.toml
+++ b/investments/client/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-investments-program = { path = "../programs/investments", features = ["no-entrypoint"], version = "0.1.0" }
-# clockwork-scheduler = { version = "1.0.1", features = ["cpi"] }
-clockwork-scheduler = { path = "../../../clockwork/programs/scheduler", features = ["cpi"] }
+# investments-program = { path = "../programs/investments", features = ["no-entrypoint"], version = "0.1.0" }
+serum-crank = { path = "../programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
+clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "main"}
 anchor-spl = { version = "0.25.0", features = ["dex"] }
 anchor-lang = "0.25.0"
 solana-sdk = "1.10.29"
