--- a/investments/clients/serum_crank/Cargo.toml
+++ b/investments/clients/serum_crank/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "client"
+name = "serum-crank-client"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# investments-program = { path = "../programs/investments", features = ["no-entrypoint"], version = "0.1.0" }
-serum-crank = { path = "../programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
+serum-crank = { path = "../../programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
 clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "main"}
 anchor-spl = { version = "0.25.0", features = ["dex"] }
 anchor-lang = "0.25.0"
