move serum_crank program to its own directory

--- a/serum_crank/client/Cargo.toml
+++ b/serum_crank/client/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serum-crank = { path = "../../programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
+serum-crank = { path = "../programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
 clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "main"}
 anchor-spl = { version = "0.25.0", features = ["dex"] }
 anchor-lang = "0.25.0"
