--- a/investments/programs/investments/Cargo.toml
+++ b/investments/programs/investments/Cargo.toml
@@ -21,3 +21,4 @@ overflow-checks = true
 [dependencies]
 anchor-spl = { version = "0.25.0", features = ["dex"] }
 anchor-lang = "0.25.0"
+clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "main", features = ["cpi"] }
