update hello_clockwork program with latest clockwork cpi interfaces

--- a/hello_clockwork/Cargo.toml
+++ b/hello_clockwork/Cargo.toml
@@ -5,4 +5,4 @@ members = [
 ]
 
 [patch.crates-io]
-clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "nick/crank-program" }
+clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "main" }
