--- a/distributor/programs/distributor/Cargo.toml
+++ b/distributor/programs/distributor/Cargo.toml
@@ -19,4 +19,6 @@ default = []
 overflow-checks = true
 
 [dependencies]
-anchor-lang = "0.24.2"
+anchor-lang = "0.25.0" 
+anchor-spl = { version = "0.25.0", features = ["token"] }
+clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "main", features = ["cpi"]}
