--- a/distributor/Anchor.toml
+++ b/distributor/Anchor.toml
@@ -1,14 +1,14 @@
 [features]
 seeds = false
 [programs.localnet]
-distributor = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+distributor = "G3X9SZaKsqHvKX2xfHPa7dpj9DFAZu3VuGQ1c2jQweZu"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "localnet"
-wallet = "/Users/eliasmoreno/.config/solana/id.json"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
