--- a/distributor/client/Cargo.toml
+++ b/distributor/client/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anchor-lang = "0.25.0"
+anchor-spl = { version = "0.25.0", features = ["dex"] }
+clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "main" }
+distributor = { path = "../programs/distributor", features = ["no-entrypoint"], version = "0.1.0" }
+solana-client-helpers = "1.1.0"
+solana-sdk = "1.10.29"
