update clockwork dep to v1.0.5 and add feature flag

--- a/distributor/programs/distributor/Cargo.toml
+++ b/distributor/programs/distributor/Cargo.toml
@@ -21,4 +21,4 @@ overflow-checks = true
 [dependencies]
 anchor-lang = "0.25.0" 
 anchor-spl = { version = "0.25.0", features = ["token"] }
-clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "main", features = ["cpi"] }
+clockwork-crank = { version = "1.0.5", features = ["cpi"] }
