--- a/hello_clockwork/client/Cargo.toml
+++ b/hello_clockwork/client/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 [dependencies]
 hello-clockwork = { path = "../programs/hello_clockwork", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "main"}
+clockwork-crank = "1.0.5"
 anchor-lang = "0.25.0"
 solana-client-helpers = "1.1.0"
 solana-sdk = "1.10.29"
+
+[features]
+devnet = []
