--- a/payments/programs/payments/Cargo.toml
+++ b/payments/programs/payments/Cargo.toml
@@ -21,4 +21,4 @@ overflow-checks = true
 [dependencies]
 anchor-spl = { version = "0.25.0", features = ["token"] }
 anchor-lang = "0.25.0" 
-clockwork-crank = { git = "https://github.com/clockwork-xyz/clockwork", branch = "main", features = ["cpi"]}
+clockwork-crank = { version = "1.0.5", features = ["cpi"] }
