--- a/event_stream/client/Cargo.toml
+++ b/event_stream/client/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anchor-lang = "0.25.0"
-clockwork-sdk = { path = "../../../clockwork/sdk", features = ["client"], version = "1.0.6" }
+clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", features = ["client"], version = "1.0.6" }
 event_stream = { path = "../programs/event_stream", features = ["no-entrypoint"], version = "0.1.0" }
 solana-client-helpers = "1.1.0"
 solana-sdk = "1.10.29"
