--- a/payments/client/Cargo.toml
+++ b/payments/client/Cargo.toml
@@ -5,12 +5,11 @@ edition = "2021"
 
 [dependencies]
 payments-program = { path = "../programs/payments", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-crank = "1.0.5"
+clockwork-sdk = { path = "../../../clockwork/sdk", version = "1.0.6", features = ["client"] }
 anchor-spl = "0.25.0"
 anchor-lang = "0.25.0"
 solana-sdk = "1.10.29"
 solana-client = "1.10.29"
-solana-client-helpers = "1.1.0"
 
 [features]
 devnet = []
