--- a/investments/client/Cargo.toml
+++ b/investments/client/Cargo.toml
@@ -6,10 +6,9 @@ edition = "2021"
 [dependencies]
 investments-program = { path = "../programs/investments", features = ["no-entrypoint"], version = "0.1.0" }
 serum-crank = { path = "../../serum_crank/programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-crank = "1.0.5"
+clockwork-sdk = { path = "../../../clockwork/sdk", version = "1.0.6", features = ["client"] }
 anchor-spl = { version = "0.25.0", features = ["dex"] }
 anchor-lang = "0.25.0"
-solana-sdk = "1.10.29"
-solana-client = "1.10.29"
-solana-client-helpers = "1.1.0"
+solana-sdk = "1.10.34"
+solana-client = "1.10.34"
 serum-common = { version = "0.4.7", features = ["client"] }
