--- a/serum_crank/programs/serum_crank/Cargo.toml
+++ b/serum_crank/programs/serum_crank/Cargo.toml
@@ -21,5 +21,5 @@ overflow-checks = true
 [dependencies]
 anchor-spl = { version = "0.25.0", features = ["dex"] }
 anchor-lang = "0.25.0"
-clockwork-crank = { version = "1.0.5", features = ["cpi"] }
+clockwork-sdk = { path = "../../../../clockwork/sdk", version = "1.0.6" }
 safe-transmute = "0.11.0"
