--- a/investments/client/Cargo.toml
+++ b/investments/client/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 [dependencies]
 investments-program = { path = "../programs/investments", features = ["no-entrypoint"], version = "0.1.0" }
 serum-crank = { path = "../../serum_crank/programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
-# clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4", features = ["client"] }
-clockwork-sdk = { path = "../../../clockwork/sdk", version = "1.1.4", features = ["client"] }
+clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4", features = ["client"] }
 anchor-spl = { version = "0.25.0", features = ["dex"] }
 anchor-lang = "0.25.0"
 solana-sdk = "1.10.34"
