--- a/hello_clockwork/client/Cargo.toml
+++ b/hello_clockwork/client/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 hello-clockwork = { path = "../programs/hello_clockwork", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4", features = ["client"] }
+# clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4", features = ["client"] }
+clockwork-sdk = { path = "../../../clockwork/sdk", version = "1.1.4", features = ["client"] }
 anchor-lang = "0.25.0"
 solana-sdk = "1.10.34"
 
