--- a/payments/client/Cargo.toml
+++ b/payments/client/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 payments-program = { path = "../programs/payments", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4", features = ["client"] }
+clockwork-sdk = { path = "../../../clockwork/sdk", version = "1.1.4", features = ["client"] }
+# clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4", features = ["client"] }
 anchor-spl = "0.25.0"
 anchor-lang = "0.25.0"
 solana-sdk = "1.10.34"
