update event stream example to use new sdk schema

--- a/event_stream/programs/event_stream/Cargo.toml
+++ b/event_stream/programs/event_stream/Cargo.toml
@@ -17,4 +17,5 @@ default = []
 
 [dependencies]
 anchor-lang = "0.25.0"
-clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4" }
+clockwork-sdk = { path = "../../../../clockwork/sdk", version = "1.1.4", features = ["queue"] }
+# clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4" }
