--- a/distributor/programs/distributor/Cargo.toml
+++ b/distributor/programs/distributor/Cargo.toml
@@ -21,4 +21,5 @@ overflow-checks = true
 [dependencies]
 anchor-lang = "0.25.0" 
 anchor-spl = { version = "0.25.0", features = ["token"] }
-clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4" }
+clockwork-sdk = { path = "../../../../clockwork/sdk", version = "1.1.4", features = ["queue"] }
+# clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4" }
