--- a/distributor/programs/distributor/Cargo.toml
+++ b/distributor/programs/distributor/Cargo.toml
@@ -19,7 +19,6 @@ default = []
 overflow-checks = true
 
 [dependencies]
-anchor-lang = "0.25.0" 
+anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
 anchor-spl = { version = "0.25.0", features = ["token"] }
-clockwork-sdk = { path = "../../../../clockwork/sdk", version = "1.1.4", features = ["queue"] }
-# clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4" }
+clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.2.9", features = ["queue"] }
