--- a/pyth_feed/Anchor.toml
+++ b/pyth_feed/Anchor.toml
@@ -2,14 +2,14 @@
 seeds = false
 skip-lint = false
 
-[programs.localnet]
-pyth_feed = "JPuxptmbs4FHxrRx6JjHYCLRJfUbWcnknaTqVXpkdpc"
+[programs.devnet]
+pyth_feed = "3JmeDCyyB1nSubYLYHrZxY4fo16aaHfa3pE4NDaxxV13"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
