--- a/payments/Anchor.toml
+++ b/payments/Anchor.toml
@@ -1,18 +1,19 @@
 [features]
 seeds = false
-
-[programs.devnet]
-payments_program = "9dbFJLM8YbgYwP4wfV1LbZ23n8p1jeNzcPkzPgShHTsf"
+skip-lint = false
 
 [programs.localnet]
-payments_program = "9dbFJLM8YbgYwP4wfV1LbZ23n8p1jeNzcPkzPgShHTsf"
+payments = "Da42fsoWLyui6iwABCXNhu8R9JdqLQ9jXvCtCfrmouw9"
+
+[programs.devnet]
+payments = "Da42fsoWLyui6iwABCXNhu8R9JdqLQ9jXvCtCfrmouw9"
 
 [registry]
-url = "https://anchor.projectserum.com"
+url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
-wallet = "~/.config/solana/id.json"
+cluster = "localnet"
+wallet = "/Users/eliasmoreno/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
