--- a/payments/Cargo.toml
+++ b/payments/Cargo.toml
@@ -1,5 +1,14 @@
 [workspace]
 members = [
-   "client",
-   "programs/*",
+    "programs/*",
+    "client"
 ]
+
+[profile.release]
+overflow-checks = true
+lto = "fat"
+codegen-units = 1
+[profile.release.build-override]
+opt-level = 3
+incremental = false
+codegen-units = 1
