--- a/event_stream/programs/event_stream/Cargo.toml
+++ b/event_stream/programs/event_stream/Cargo.toml
@@ -17,4 +17,4 @@ default = []
 
 [dependencies]
 anchor-lang = "0.25.0"
-clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.2.14", features = ["thread"] }
+clockwork-sdk = { version = "1.3.1", features = ["thread"] }
