--- a/investments/programs/investments/Cargo.toml
+++ b/investments/programs/investments/Cargo.toml
@@ -21,5 +21,4 @@ overflow-checks = true
 [dependencies]
 anchor-spl = { version = "0.25.0", features = ["dex"] }
 anchor-lang = "0.25.0"
-clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.2.14", features = ["thread"] }
-
+clockwork-sdk = { version = "1.3.1", features = ["thread"] }
