--- a/payments/client/Cargo.toml
+++ b/payments/client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 payments = { path = "../programs/payments", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.2.13", features = ["client"] }
+clockwork-sdk = { version = "1.3.1", features = ["client"] }
 anchor-spl = "0.25.0"
 anchor-lang = "0.25.0"
 solana-sdk = "1.10.34"
