--- a/payments/programs/payments/Cargo.toml
+++ b/payments/programs/payments/Cargo.toml
@@ -18,4 +18,4 @@ default = []
 [dependencies]
 anchor-lang = {version = "0.25.0", features = ["init-if-needed"] }
 anchor-spl = { version = "0.25.0", features = ["token"] }
-clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.2.13", features = ["queue"] }
+clockwork-sdk = { version = "1.3.1", features = ["thread"] }
