--- a/event_stream/programs/event_stream/Cargo.toml
+++ b/event_stream/programs/event_stream/Cargo.toml
@@ -17,5 +17,5 @@ default = []
 
 [dependencies]
 anchor-lang = "0.25.0"
-clockwork-sdk = { path = "../../../../clockwork/sdk", version = "1.2.14", features = ["queue"] }
+clockwork-sdk = { path = "../../../../clockwork/sdk", version = "1.3.1", features = ["thread"] }
 # clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4" }
