program rename to stats

--- a/stats/programs/stats/Cargo.toml
+++ b/stats/programs/stats/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "pyth_stats"
+name = "stats"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "pyth_stats"
+name = "stats"
 
 [features]
 no-entrypoint = []
