--- a/stats/programs/stats/Cargo.toml
+++ b/stats/programs/stats/Cargo.toml
@@ -17,3 +17,5 @@ default = []
 
 [dependencies]
 anchor-lang = "0.25.0"
+clockwork-sdk = { version = "1.3.8", features = ["thread"] }
+pyth-sdk-solana = "0.6.1"
