--- a/stats/Anchor.toml
+++ b/stats/Anchor.toml
@@ -2,14 +2,17 @@
 seeds = false
 skip-lint = false
 [programs.localnet]
-stats = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+stats = "5cj44QGY53QhgiqWYaFMQuGtLieeR4gH6rJzCU9iLoAR"
+
+[programs.devnet]
+stats = "5cj44QGY53QhgiqWYaFMQuGtLieeR4gH6rJzCU9iLoAR"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
-wallet = "/Users/eliasmoreno/.config/solana/id.json"
+cluster = "devnet"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
