--- a/subscriptions/client/Cargo.toml
+++ b/subscriptions/client/Cargo.toml
@@ -5,13 +5,12 @@ edition = "2021"
 
 [dependencies]
 subscriptions-program = { path = "../programs/subscriptions", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.2.13", features = ["client"] }
+clockwork-sdk = { version = "1.3.1", features = ["client"] }
 clockwork-crank = "1.0.5"
 anchor-spl = "0.25.0"
 anchor-lang = "0.25.0"
 solana-sdk = "1.10.34"
 solana-client = "1.10.34"
-
 
 [features]
 devnet = []
