--- a/subscriptions/client/Cargo.toml
+++ b/subscriptions/client/Cargo.toml
@@ -11,6 +11,10 @@ anchor-spl = "0.25.0"
 anchor-lang = "0.25.0"
 solana-sdk = "1.10.34"
 solana-client = "1.10.34"
+dotenv = "0.15.0"
+serde_json = "1.0.89"
+serde = "1.0.147"
+rand = "0.8.5"
 
 [features]
 devnet = []
