--- a/stats/client/Cargo.toml
+++ b/stats/client/Cargo.toml
@@ -9,3 +9,6 @@ anchor-lang = "0.25.0"
 clockwork-sdk = { version = "1.3.8", features = ["client"] }
 stats = { path = "../programs/stats", features = ["no-entrypoint"], version = "0.1.0" }
 solana-sdk = "1.13.4"
+
+[features]
+mainnet = []
