--- a/subscriptions/.env.example
+++ b/subscriptions/.env.example
@@ -1,7 +1,8 @@
-CLIENT_PRIVATE=
-SUBSCRIPTION=
-SUBSCRIPTION_THREAD=
-SUBSCRIPTION_BANK=
-SUBSCRIBER=
-SUBSCRIBER_TOKEN_ACCOUNT=
-MINT=
+CLIENT_PRIVATE="[255,255,...255]"
+SUBSCRIPTION="qweqweqwe"
+SUBSCRIPTION_THREAD="qweqweqwe"
+SUBSCRIPTION_BANK="qweqweqwe"
+SUBSCRIBER="qweqweqwe"
+SUBSCRIBER_TOKEN_ACCOUNT="qweqweqwe"
+MINT="qweqweqwe"
+SUBSCRIPTION_ID="123"
