--- a/subscriptions/client/Cargo.toml
+++ b/subscriptions/client/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 subscriptions-program = { path = "../programs/subscriptions", features = ["no-entrypoint"], version = "0.1.0" }
+clap = { version = "4.0.28", features = ["derive"] }
 clockwork-sdk = { version = "1.3.1", features = ["client"] }
 clockwork-crank = "1.0.5"
 anchor-spl = "0.25.0"
