--- a/hello_clockwork/client/Cargo.toml
+++ b/hello_clockwork/client/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2021"
 
 [dependencies]
 hello-clockwork = { path = "../programs/hello_clockwork", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-sdk = { version = "1.3.9", features = ["client"] }
+clockwork-sdk = { version = "1.3.9", features = ["client", "utils"] }
 anchor-lang = "0.25.0"
 solana-sdk = "1.10.34"
+solana-cli-config = "1.10.4"
 
 [features]
-devnet = []
+localnet = []
