--- a/stats/programs/stats/Cargo.toml
+++ b/stats/programs/stats/Cargo.toml
@@ -19,3 +19,5 @@ default = []
 anchor-lang = "0.25.0"
 clockwork-sdk = { version = "1.3.8", features = ["thread"] }
 pyth-sdk-solana = "0.6.1"
+bytemuck = "1.12.3"
+arrayref = "0.3.6"
