--- a/stats/programs/stats/Cargo.toml
+++ b/stats/programs/stats/Cargo.toml
@@ -17,5 +17,6 @@ default = []
 
 [dependencies]
 anchor-lang = "0.25.0"
+bytemuck = "1.12.3"
 clockwork-sdk = { version = "1.3.9", features = ["thread"] }
 pyth-sdk-solana = "0.6.1"
