--- a/serum_crank/programs/serum_crank/Cargo.toml
+++ b/serum_crank/programs/serum_crank/Cargo.toml
@@ -19,7 +19,7 @@ default = []
 overflow-checks = true
 
 [dependencies]
-anchor-spl = { version = "0.25.0", features = ["dex"] }
-anchor-lang = "0.25.0"
-clockwork-sdk = { version = "1.3.9", features = ["thread"] }
+anchor-spl = { version = "0.26.0", features = ["dex"] }
+anchor-lang = "0.26.0"
+clockwork-sdk = { version = "1.4.0" }
 safe-transmute = "0.11.0"
