--- a/serum_crank/client/Cargo.toml
+++ b/serum_crank/client/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 [dependencies]
 serum-crank = { path = "../programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
 clockwork-sdk = { version = "1.4.0" }
+clockwork-client = { version = "1.4.0" }
 anchor-spl = { version = "0.26.0", features = ["dex"] }
 anchor-lang = "0.26.0"
 solana-sdk = "1.13.5"
+solana-cli-config = "1.10.4"
 solana-client = "1.13.5"
 
 [features]
-devnet = []
+localnet = []
