--- a/pyth_stats/programs/pyth_stats/Cargo.toml
+++ b/pyth_stats/programs/pyth_stats/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "stats"
+name = "pyth_stats"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "stats"
+name = "pyth_stats"
 
 [features]
 no-entrypoint = []
@@ -16,7 +16,8 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.25.0"
+anchor-lang = "0.26.0"
 bytemuck = "1.12.3"
-clockwork-sdk = { version = "1.3.9", features = ["thread"] }
+clockwork-sdk = "1.4.0"
 pyth-sdk-solana = "0.7.0"
+
