--- a/pyth_stats/Anchor.toml
+++ b/pyth_stats/Anchor.toml
@@ -1,15 +1,16 @@
 [features]
 seeds = false
 skip-lint = false
-[programs.localnet]
-pyth_stats = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+
+[programs.mainnet]
+pyth_stats = "5cj44QGY53QhgiqWYaFMQuGtLieeR4gH6rJzCU9iLoAR"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
-wallet = "/Users/eliasmoreno/.config/solana/id.json"
+cluster = "mainnet"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
