Pyth Stats Program - Mainnet Tested (#43)
* vecdeque -> static sized array (needs to be tested)

* update stats account with static sized array + zero copy

* removed delete ix

* print data after it has been updated

* improved logic for head and tail vals

* custom sizable buffer at the end of zero copy account

* return vecdeque of TEntries

* return nothing from load_entries_mut

* update dep and get rid of unstable feature

* forgot to commit getting rid of this unstable feature

* get rid of patch

* deleted delete ix

* update calc ix accounts

* rotation of buffer works for a fixed size

* reintroduce `realloc_buffer` dynamic ix

* reintroducing code block to clear stale data that meet lookback window threshold

* Cleanup ring buffer logic (#41)

* buffer rotation working with improved logic

* updated client ixs

* bug fix that was hindering buffer rotation

* Prevent underflow error on subtraction (#42)

* reintroduce realloc buffer dynamic ix

* update default buffer limit

* rename program from stats -> pyth_stats

* remove sample rate + uneccessary kickoff ix variable

* update Anchor toml for mainnet deployment

Co-authored-by: Nick Garfield <nick@clockwork.xyz>

--- a/pyth_stats/Anchor.toml
+++ b/pyth_stats/Anchor.toml
@@ -2,14 +2,8 @@
 seeds = false
 skip-lint = false
 
-[programs.localnet]
-stats = "5cj44QGY53QhgiqWYaFMQuGtLieeR4gH6rJzCU9iLoAR"
-
-[programs.devnet]
-stats = "5cj44QGY53QhgiqWYaFMQuGtLieeR4gH6rJzCU9iLoAR"
-
 [programs.mainnet]
-stats = "5cj44QGY53QhgiqWYaFMQuGtLieeR4gH6rJzCU9iLoAR"
+pyth_stats = "5cj44QGY53QhgiqWYaFMQuGtLieeR4gH6rJzCU9iLoAR"
 
 [registry]
 url = "https://api.apr.dev"
