--- a/hello_clockwork/programs/hello_clockwork/Cargo.toml
+++ b/hello_clockwork/programs/hello_clockwork/Cargo.toml
@@ -19,5 +19,5 @@ default = []
 overflow-checks = true
 
 [dependencies]
-anchor-lang = "0.25.0"
-clockwork-sdk = { version = "1.3.9", features = ["thread"] }
+anchor-lang = "0.26.0"
+clockwork-sdk = { version = "1.4.0" }
