--- a/distributor/client/Cargo.toml
+++ b/distributor/client/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anchor-lang = "0.25.0"
-anchor-spl = { version = "0.25.0", features = ["dex"] }
-clockwork-sdk = { version = "1.3.9", features = ["client"] }
+anchor-lang = "0.26.0"
+anchor-spl = { version = "0.26.0", features = ["dex"] }
+clockwork-client = { version = "1.4.0" }
+clockwork-utils = { version = "1.4.0" }
 distributor = { path = "../programs/distributor", features = ["no-entrypoint"], version = "0.1.0" }
-solana-sdk = "1.10.34"
+solana-cli-config = "1.10.4"
+solana-sdk = "1.13.5"
 
 [features]
-devnet = []
+localnet = []
