--- a/payments/client/Cargo.toml
+++ b/payments/client/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anchor-lang = "0.26.0"
+anchor-spl = { version = "0.26.0", features = ["dex"] }
+clockwork-client = { version = "1.4.0" }
+clockwork-utils = { version = "1.4.0" }
 payments = { path = "../programs/payments", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-sdk = { version = "1.3.9", features = ["client"] }
-anchor-spl = "0.25.0"
-anchor-lang = "0.25.0"
-solana-sdk = "1.10.34"
-solana-client = "1.10.34"
+#solana-client = "1.10.34"
+solana-cli-config = "1.10.4"
+solana-sdk = "1.13.5"
