--- a/pyth_feed/client/Cargo.toml
+++ b/pyth_feed/client/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 
 [dependencies]
-anchor-lang = "0.25.0"
-clockwork-sdk = { version = "1.3.1", features = ["client"] }
 pyth_feed = { path = "../programs/pyth_feed", features = ["no-entrypoint"], version = "0.1.0" }
-solana-sdk = "1.10.34"
+anchor-lang = "0.26.0"
+clockwork-client = { version = "1.4.0" }
+clockwork-utils = { version = "1.4.0" }
+solana-cli-config = "1.10.4"
+solana-sdk = "1.13.5"
