--- a/pyth_feed/programs/pyth_feed/Cargo.toml
+++ b/pyth_feed/programs/pyth_feed/Cargo.toml
@@ -16,6 +16,6 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.25.0"
-clockwork-sdk = { version = "1.3.1", features = ["thread"] }
-pyth-sdk-solana = "0.6.1"
+anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
+clockwork-sdk = { version = "1.4.0" }
+pyth-sdk-solana = "0.7.0"
