updated program to pyth-sdk-solana 0.7.0 updated client to clockwork 1.4.0

--- a/pyth_feed/Anchor.toml
+++ b/pyth_feed/Anchor.toml
@@ -3,7 +3,7 @@ seeds = false
 skip-lint = false
 
 [programs.devnet]
-pyth_feed = "CnRMZRQV4mdgYWPsmRS3EU6hAomPTf6rVh9Ha3sioi8p"
+pyth_feed = "7PcMb2uYgatpWL3uhY4jXG7V4Jr9TUyUNTeRzMyFGwFg"
 
 [registry]
 url = "https://api.apr.dev"
@@ -14,3 +14,9 @@ wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+# mainnet SOL/USD price feed: https://pyth.network/price-feeds/crypto-sol-usd?cluster=mainnet-beta
+#[test.validator]
+#url = "https://api.mainnet-beta.solana.com"
+#[[test.validator.clone]]
+#address = "H6ARHf6YXhGYeQfUzQNGk6rDNnLBQKrenN712K4AQJEG"
