--- a/pyth_feed/client/Cargo.toml
+++ b/pyth_feed/client/Cargo.toml
@@ -11,3 +11,6 @@ clockwork-client = { version = "1.4.0" }
 clockwork-utils = { version = "1.4.0" }
 solana-cli-config = "1.10.4"
 solana-sdk = "1.13.5"
+
+[features]
+localnet = []
