openbook program address

--- a/serum_crank/programs/serum_crank/Cargo.toml
+++ b/serum_crank/programs/serum_crank/Cargo.toml
@@ -15,7 +15,7 @@ no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
 localnet = []
-devnet = []
+devnet = ["anchor-spl/devnet"]
 
 [profile.release]
 overflow-checks = true
