update event_stream example to Clockwork v1.4.0

--- a/event_stream/Anchor.toml
+++ b/event_stream/Anchor.toml
@@ -3,14 +3,14 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-event_stream = "2taednWYtXptTRiXvZEyWXLDV7YrotuXq4suwvhVmz9x"
+event_stream = "3jAVzWXRAdYtinGn3as2veAmt1BuabzmECGCiQxWnSEr"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "localnet"
-wallet = "/Users/garfield/.config/solana/id.json"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
