--- a/event_stream/client/Cargo.toml
+++ b/event_stream/client/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anchor-lang = "0.25.0"
-clockwork-sdk = { version = "1.3.9", features = ["client"] }
 event_stream = { path = "../programs/event_stream", features = ["no-entrypoint"], version = "0.1.0" }
-solana-sdk = "1.10.29"
+clockwork-client = { version = "1.4.0" }
+clockwork-utils = { version = "1.4.0" }
+anchor-lang = "0.26.0"
+solana-cli-config = "1.10.4"
+solana-sdk = "1.13.5"
 
 [features]
-devnet = []
+localnet = []
