a rewrite because all of this can be automated with 2 threads

--- a/investments/Anchor.toml
+++ b/investments/Anchor.toml
@@ -1,19 +1,14 @@
 [features]
 seeds = false
 
-[programs.localnet]
+[programs.mainnet]
 investments_program = "6mrizDvtdQdg5J79GRCbBDZvmKjDjwuUcZNM5zj4TGdD"
-serum_crank = "9BhecKZc6En8eaMRFE3QD5wdGwkp8QNUkufUtsP7Tb1B"
-
-[programs.devnet]
-investments_program = "6mrizDvtdQdg5J79GRCbBDZvmKjDjwuUcZNM5zj4TGdD"
-serum_crank = "9BhecKZc6En8eaMRFE3QD5wdGwkp8QNUkufUtsP7Tb1B"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
-cluster = "devnet"
+cluster = "mainnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
