name mint names to be pc/coin instead of a/b

--- a/investments/programs/investments/Cargo.toml
+++ b/investments/programs/investments/Cargo.toml
@@ -20,6 +20,6 @@ overflow-checks = true
 
 [dependencies]
 anchor-spl = { version = "0.26.0", features = ["dex"] }
-anchor-lang = "0.26.0"
+anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
 clockwork-sdk = "1.4.0"
 safe-transmute = "0.11.0"
