--- a/walkthroughs/cpi/starter/driver/Anchor.toml
+++ b/walkthroughs/cpi/starter/driver/Anchor.toml
@@ -1,14 +1,14 @@
 [features]
 seeds = false
-
-[programs.devnet]
-hello_clockwork = "HCWy1dTbHUUk64LyqBeQxha23AMrRgKfShPXVmDuiUbY"
+skip-lint = false
 
 [programs.localnet]
-hello_clockwork = "HCWy1dTbHUUk64LyqBeQxha23AMrRgKfShPXVmDuiUbY"
+driver = "kvXzzP52WigzUjSLYqWdJuYvN7NobfbAnCqrCzV8fTf"
+[progreams.devnet]
+driver = "kvXzzP52WigzUjSLYqWdJuYvN7NobfbAnCqrCzV8fTf"
 
 [registry]
-url = "https://anchor.projectserum.com"
+url = "https://api.apr.dev"
 
 [provider]
 cluster = "devnet"
