--- a/openbook_dca/Anchor.toml
+++ b/openbook_dca/Anchor.toml
@@ -1,11 +1,12 @@
 [features]
 seeds = false
+skip-lint = false
 
 [programs.mainnet]
-investments_program = "6mrizDvtdQdg5J79GRCbBDZvmKjDjwuUcZNM5zj4TGdD"
+openbook_dca = "6mrizDvtdQdg5J79GRCbBDZvmKjDjwuUcZNM5zj4TGdD"
 
 [registry]
-url = "https://anchor.projectserum.com"
+url = "https://api.apr.dev"
 
 [provider]
 cluster = "mainnet"
