--- a/distributor/Cargo.toml
+++ b/distributor/Cargo.toml
@@ -3,3 +3,6 @@ members = [
     "client",
     "programs/*"
 ]
+
+[patch.crates-io]
+clockwork-sdk = { git = "https://github.com/clockwork-xyz/clockwork", tag = "v2.0.1" }
