--- a/distributor/package.json
+++ b/distributor/package.json
@@ -5,7 +5,7 @@
         "programid:new": "rm target/deploy/distributor-keypair.json && ./deploy.sh devnet"
     },
     "dependencies": {
-        "@clockwork-xyz/sdk": "0.0.9",
+        "@clockwork-xyz/sdk": "^0.2.3",
         "@solana/spl-token": "^0.2.0",
         "@project-serum/anchor": "^0.26.0"
     },
