--- a/distributor/programs/distributor/Cargo.toml
+++ b/distributor/programs/distributor/Cargo.toml
@@ -21,4 +21,4 @@ overflow-checks = true
 [dependencies]
 anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
 anchor-spl = { version = "0.26.0", features = ["token"] }
-clockwork-sdk = { version = "1.4.2" }
+clockwork-sdk = { version = "~2.0.1" }
