--- a/counter/package.json
+++ b/counter/package.json
@@ -1,8 +1,7 @@
 {
     "scripts": {
         "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
-        "program:new": "rm target/deploy/counter-keypair.json && ./new-program-id.sh $1"
+        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
         "@project-serum/anchor": "^0.26.0",
